<?xml version="1.0" encoding="utf-8"?>
<!-- Intro -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/intro"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/school_color"
    android:clipToOutline="true"
    app:layout_anchorGravity="center|center_horizontal|center_vertical">

    <View
        android:id="@+id/rectangle1"
        android:layout_width="141dp"
        android:layout_height="213dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="272dp"
        android:layout_marginTop="-36dp"
        android:layout_marginEnd="-2dp"
        android:background="@drawable/rectangle"
        android:rotation="90" />
    <TextView
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="46dp"
        android:gravity="center"
        android:text="@string/dashboard"
        android:textAppearance="@style/dashboard" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="113dp"
        android:layout_height="116dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="87dp"
        android:background="@color/white"
        app:shapeAppearanceOverlay="@style/dashboardavatar" />

    <TextView
        android:id="@+id/manager_nam"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="224dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/manager_nam"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/rectangle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="290dp"
        android:background="@drawable/rectangle3">
        <!-- Rectangle 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="50dp">

            <TextView
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/blackarrow"
                android:drawableBottom="@drawable/line__"
                android:gravity="center_vertical"
                android:text="@string/home"
                android:textColor="@color/school_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/attendance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:drawableRight="@drawable/blackarrow"
                android:drawableBottom="@drawable/line__"
                android:gravity="center_vertical"
                android:text="@string/attendance"
                android:textColor="@color/school_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/class_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:drawableRight="@drawable/blackarrow"
                android:drawableBottom="@drawable/line__"
                android:gravity="center_vertical"
                android:text="@string/class_str"
                android:textColor="@color/school_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/student"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:drawableRight="@drawable/blackarrow"
                android:drawableBottom="@drawable/line__"
                android:gravity="center_vertical"
                android:text="@string/students"
                android:textColor="@color/school_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/teacher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:drawableRight="@drawable/blackarrow"
                android:drawableBottom="@drawable/line__"
                android:gravity="center_vertical"
                android:text="@string/teachers"
                android:textColor="@color/school_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/finance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:drawableRight="@drawable/blackarrow"
                android:drawableBottom="@drawable/line__"
                android:gravity="center_vertical"
                android:text="@string/finance"
                android:textColor="@color/school_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/signout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:drawableRight="@drawable/blackarrow"
                android:drawableBottom="@drawable/line__"
                android:gravity="center_vertical"
                android:text="@string/sign_out"
                android:textColor="#e7267a"
                android:textSize="25sp" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/rectangle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="380dp"
            android:background="@drawable/homenav"
            android:orientation="horizontal">



            <TextView
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_baseline_home_24"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/school_color" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_baseline_list_24"
                android:gravity="center"
                android:text="@string/students"
                android:textColor="@color/school_color" />

            <TextView
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_baseline_person_outline_24"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/school_color" />
        </LinearLayout>

    </RelativeLayout>
    <View
        android:id="@+id/rectangle"
        android:layout_width="304.75dp"
        android:layout_height="303.88dp"
        android:layout_marginTop="72.44dp"
        android:background="@drawable/rectangle" />


</RelativeLayout>