<?xml version="1.0" encoding="utf-8"?>
<!-- Intro -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/school_color"
    android:clipToOutline="true"
    app:layout_anchorGravity="center|center_horizontal|center_vertical"
    tools:context=".StudentActivity">

    <TextView
        android:id="@+id/students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="19dp"
        android:gravity="top"
        android:text="@string/students"
        android:textAppearance="@style/dashboard" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_marginTop="120dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/total"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/total"
        android:textAppearance="@style/total" />

    <TextView
        android:id="@+id/total_value"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/total"
        android:layout_alignBottom="@+id/total"
        android:text="0"
        android:textAppearance="@style/total_value"
        />
    </LinearLayout>

    <View
        android:id="@+id/rectangle"
        android:layout_width="304.75dp"
        android:layout_height="303.88dp"
        android:layout_marginTop="72.44dp"
        android:background="@drawable/rectangle" />

    <View
        android:id="@+id/rectangle1"
        android:layout_width="200.22dp"
        android:layout_height="182.95dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="-30dp"
        android:background="@drawable/rectangle"
        android:rotation="90" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/student_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_layout">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/add" />


</RelativeLayout>